Finalized database settings page

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
-RewriteBase /sites/eop2.0/
+RewriteBase /eop2.0/
 RewriteCond $1 !^(index\.php|images|robots\.txt|assets)
 RewriteRule ^(.*)$ index.php/$1 [L]
