--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 php_errors.log
-.idea/workspace.xml
-workspace.xml
 .htaccess
-config.php
+.idea/workspace.xml
+application/config/config.php
+*.log
